--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Altermind Project",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --open",
+    "start": "NODE_ENV=development webpack-dev-server --open --config webpack.dev.js",
     "prestart": "npm run clean",
-    "build": "webpack",
+    "build": "webpack --config webpack.prod.js",
     "prebuild": "npm run clean",
     "clean": "rimraf build generated"
   },
